Update css theme fix layout issue on mobile devices

--- a/css/component.css
+++ b/css/component.css
@@ -2,6 +2,7 @@ html.js,
 .js body {
 	overflow: hidden;
 	height: 100vh;
+	width: 100%;
 }
 @import "https://fonts.googleapis.com/css?family=Dosis:300,400,500,600,700";
 /* Pages nav */
@@ -193,7 +194,8 @@ html.js,
 .js .page {
 	position: relative;
 	z-index: 5;
-	overflow: auto;
+	overflow: scroll;
+	overflow-x: hidden;
 	width: 100%;
 	height: 100vh;
 	pointer-events: auto;
@@ -278,7 +280,7 @@ html.js,
 
 .js .project header .logo {
   /* color: #ee4d4d; */
-  color: #E0AF50;
+  color: #66CC99;
 
   float: left;
   font-family: "Dosis", arial, tahoma, verdana;
@@ -316,7 +318,7 @@ html.js,
   content: "";
   width: 3px;
   height: 100%;
-  background: #E0AF50;
+  background: #66CC99;
   left: 50%;
   top: 0;
   position: absolute;
@@ -333,7 +335,7 @@ html.js,
   position: relative;
 }
 .js .project #timeline .timeline-item .timeline-icon {
-  background: #E0AF50;
+  background: #66CC99;
   width: 60px;
   height: 60px;
   position: absolute;
@@ -370,7 +372,7 @@ html.js,
 }
 .js .project #timeline .timeline-item .timeline-content h2 {
   padding: 15px;
-  background: #E0AF50;
+  background: #66CC99;
   color: #726f77;
   margin: -20px -20px 0 -20px;
   font-weight: bold;
@@ -414,7 +416,7 @@ html.js,
   height: 0;
   border-top: 7px solid transparent;
   border-bottom: 7px solid transparent;
-  border-left: 7px solid #E0AF50;
+  border-left: 7px solid #66CC99;
 }
 .js .project #timeline .timeline-item .timeline-content.right {
   float: right;
@@ -424,7 +426,7 @@ html.js,
   right: 45%;
   left: inherit;
   border-left: 0;
-  border-right: 7px solid #E0AF50;
+  border-right: 7px solid #66CC99;
 }
 .js .project .btn {
   padding: 5px 15px;
